# DRF

./: .env_exmpl  pyproject.toml
config/: settings.py  urls.py
course/: models.py  paginators.py  serializers.py  tests.py  urls.py  views.py
course/management/commands/: cpa.py
course/migrations/: 0001_initial.py  0002_lesson_course_payments.py  0003_course_owner_lesson_owner.py  0004_course_url_subscription.py
users/: models.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_moderator.py
